--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,8 @@
-/* TODO Add site wide styles */
+/* logo and btn color : #F8385D */
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  font-family: "Ubuntu", sans-serif;
+}
