--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -35,10 +35,17 @@ nav ul li a {
 }
 
 /* Change the color on hover */
-nav ul li a:hover {
+ul li a:hover {
   color: #F8385D; 
 }
 
 .hidden {
   display: none;
+}
+
+.profile-btn {
+  cursor: pointer;
+  font-size: 2.6rem;
+  color: #F8385D;
+  position: relative;
 }
