--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -3,10 +3,17 @@
   font-weight: 400;
 }
 
-.spots-container {
+/* .spots-container {
   padding: 30px 0;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 50px 10px;
+} */
+
+.spots-container {
+  padding: 30px 0;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(200px, 1fr));
+  gap: 20px;
 }
