--- a/frontend/src/components/SpotCard/SpotCard.css
+++ b/frontend/src/components/SpotCard/SpotCard.css
@@ -1,11 +1,17 @@
 .spot-card {
-  margin: auto;
-  width: 350px;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: scale(1.05);
 }
 
 .spotImage {
-  width: 350px;
-  height: 350px;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
 .spot-info {
