--- a/frontend/src/components/SpotCard/SpotCard.css
+++ b/frontend/src/components/SpotCard/SpotCard.css
@@ -43,3 +43,12 @@
   background-color: #F8385D;
   color: #FFFFFF;
 }
+
+.update-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.update-link:hover {
+  color: #FFFFFF;
+}
