Create a openModal component to open a modal to confirm delete a spot

--- a/frontend/src/components/SpotCard/SpotCard.css
+++ b/frontend/src/components/SpotCard/SpotCard.css
@@ -52,3 +52,12 @@
 .update-link:hover {
   color: #FFFFFF;
 }
+
+.open-modal {
+  padding: 50px 20px;
+  text-align: center;
+}
+
+#confirm-delete-btn {
+  margin-right: 20px;
+}
