--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -56,3 +56,13 @@ ul li a:hover {
   color: #F8385D;
   position: relative;
 }
+
+.create-new-spot-link {
+  font-size: 1rem;
+  color: #6e6e6e;
+  text-decoration: none;
+}
+
+.create-new-spot-link:hover {
+  color: #F8385D;
+}
