--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,4 +1,4 @@
-header {
+.header {
   max-width: 100%;
   color: #000000;
   display: flex;
@@ -18,7 +18,7 @@ header {
 /* navigation menu */
 nav {
   display: flex;
-  min-width: 200px;
+  min-width: 250px;
   align-items: center;
   justify-content: space-between;
 };
@@ -51,10 +51,17 @@ ul li a:hover {
 }
 
 .profile-btn {
-  cursor: pointer;
-  font-size: 2.6rem;
-  color: #F8385D;
-  position: relative;
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* margin-right: 50px; */
+    /* border-radius: 10px; */
+    /* padding: 10px; */
+    position: absolute;
+    right: 50px;
+    color: #F8385D;
+    cursor: pointer;
+    font-size: 2.6rem;
 }
 
 .create-new-spot-link {
@@ -65,4 +72,30 @@ ul li a:hover {
 
 .create-new-spot-link:hover {
   color: #F8385D;
+}
+
+.dropdowncontainer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  right: 50px;
+  top: 80px;
+  background-color: white;
+  border: black 1px solid;
+  border-radius: 10px;
+  width: 140px;
+  /* height: 180px; */
+  list-style: none;
+  padding: 5px 0;
+}
+
+.dropdown-items {
+  margin: 5px auto;
+}
+
+.dropdowncontainer li {
+  cursor: pointer;
+  font-weight: bold;
 }
