--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,10 +44,11 @@ q:before, q:after {
 body {
 	font-family: "Poppins", sans-serif;
   font-family: "Ubuntu", sans-serif;
+	height: 100vh;
 }
 
 .app {
 	margin: 30px auto;
+	padding-bottom: 100px;
 	width: 80%;
-	height: 100vh;
 }
